--- a/styles/index-styles.css
+++ b/styles/index-styles.css
@@ -17,7 +17,31 @@ section {
     margin-bottom: 1rem;
 }
 
+section>* {
+    margin-right: 1rem;
+}
+
 #fsButton {
     font-size: 1.2rem;
     width: 8rem;
 }
+
+.checkboxSection {
+    display: flex;
+    flex-flow: column;
+}
+
+.checkboxSection>* {
+    margin-bottom: 1rem;
+}
+
+label {
+    margin-right: 2.4rem;
+}
+
+input[type="color"],
+input[type="checkbox"] {
+    margin-right: 0.5rem;
+}
+
+{}
